<resources>
    <string name="app_name">antiquities</string>
    <string name="notice_app_exit">한번 더 누르면 종료됩니다</string>
    <string name="notice_need_permission">권한승인을 하지않으면 일부기능을 사용 할 수 없습니다.</string>
    <string name="notice_need_bluetooth">Bluetooth를 켜지않으면 일부기능을 사용 할 수 없습니다.</string>

    <string name="notice_disable_arcore">현제디바이스는 ARCore 이용이 불가능 합니다.</string>
    <string name="notice_need_arcore">ARCore를 설치하신후에 이용가능합니다.</string>
    <string name="notice_beacon_find">비콘발견.</string>
    <string name="notice_beacon_out">비콘아웃.</string>
    <string name="intro_loading">데이터를 불러오고 있습니다.</string>

    <string name="page_map_camera_guide">카메라 버튼을 누르고 주변에\n마커 이미지를 비춰보세요.</string>
    <string name="page_mounds_find_info">새로운 유물이\n도감에 수집되었습니다.</string>

    <string name="popup_scan_guide">마커 이미지를 찾아 비춰보세요.</string>
    <string name="popup_scan_find_info"> 발견!!!</string>

    <string name="page_book_title">유물 도감</string>
    <string name="page_book_find">찾은 유물</string>
    <string name="page_book_search">찾아야 할 유물</string>


    <string name="popup_guide_title">체험 안내</string>
    <string name="popup_guide_step">step</string>
    <string name="popup_guide_text0">고분에 접근 시\n알림 수신</string>
    <string name="popup_guide_text1">마커 이미지\n인식</string>
    <string name="popup_guide_text2">고분 축조과정\n보기</string>
    <string name="popup_guide_text3">숨은 유물\n발굴하기</string>

    <string name="popup_gesture_title">화면 보는 방법</string>
    <string name="popup_gesture_text0">확대</string>
    <string name="popup_gesture_text1">축소</string>
    <string name="popup_gesture_text2">회전</string>
    <string name="popup_gesture_text3">이동</string>

    <string name="popup_setting_title">"설정"</string>

    <string name="popup_setting_sound">"음소거"</string>
    <string name="popup_setting_beacon">"비콘"</string>
    <string name="popup_setting_reset">"도감 초기화"</string>
    <string name="popup_setting_reset_check">"도감이 초기화됩니다."</string>

    <string name="btn_check_review">다시 보지 않기</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>
</resources>
