<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_top"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
           >
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="@dimen/margin_regular"
                android:src="@drawable/icon_antiquity"
                android:scaleType="fitCenter"
                android:layout_gravity="left|center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_medium"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/margin_thin"
                android:text="@string/page_book_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="3dp"
                android:gravity="right|bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="left|center_vertical"

                    android:src="@drawable/icon_antiquity_find" />

                <TextView
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/margin_thin"
                    android:text="@string/page_book_find"
                    android:textAlignment="center"
                    android:textColor="@color/colorBrownLight"
                    android:textSize="@dimen/font_light" />

                <TextView
                    android:id="@+id/textFind"
                    style="@style/font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/margin_extra_thin"
                    android:text="00"
                    android:textColor="@color/colorBrownLight"
                    android:textSize="@dimen/font_bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:src="@drawable/icon_antiquity_search" />

                <TextView
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/margin_thin"
                    android:text="@string/page_book_search"
                    android:textAlignment="center"
                    android:textColor="@color/colorBrownLight"
                    android:textSize="@dimen/font_light" />

                <TextView
                    android:id="@+id/textSearch"
                    style="@style/font_bold"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/margin_extra_thin"
                    android:text="00"
                    android:textColor="@color/colorBrownLight"
                    android:textSize="@dimen/font_bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right|center_vertical"
                android:background="@color/transparent"
                android:src="@drawable/btn_close_black"
                android:scaleType="fitCenter"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="@dimen/margin_regular"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_antiquities">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="24dp"
            android:layout_height="38dp"
            android:layout_gravity="left|center_vertical"
            android:background="@color/transparent"
            android:src="@drawable/btn_prev"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/margin_medium"/>

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="24dp"
            android:layout_height="38dp"
            android:layout_gravity="right|center_vertical"
            android:background="@color/transparent"
            android:src="@drawable/btn_next"
            android:scaleType="fitXY"
            android:layout_marginRight="@dimen/margin_medium"/>

    </FrameLayout>
</LinearLayout>